[gd_scene load_steps=2 format=3 uid="uid://ognbx0jpecee"]

[ext_resource type="Script" path="res://scripts/multiplayer_menu.gd" id="1_hgoau"]

[node name="Multiplayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hgoau")

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 160.0
offset_right = 264.0
offset_bottom = 207.0
focus_mode = 0
text = "host"

[node name="join" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 88.0
offset_right = 264.0
offset_bottom = 135.0
focus_mode = 0
text = "join"

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 232.0
offset_right = 264.0
offset_bottom = 279.0
text = "start"

[node name="name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 296.0
offset_bottom = 63.0
placeholder_text = "nome"
context_menu_enabled = false
clear_button_enabled = true
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="player_list" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 32.0
offset_right = 424.0
offset_bottom = 32.0

[connection signal="button_down" from="host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="start" to="." method="_on_start_button_down"]
